manifests/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-pod
  template:
    metadata:
      name: fastapi-pod
      labels:
        app: fastapi-pod
    spec:
      containers:
        - name: fast-api-summary
          image: rdddocker/backend
          imagePullPolicy: Never
          ports:
          - containerPort: 8000
        

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-pod

  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend-pod

    spec:
      containers:
        - name: frontend-container
          image: rdddocker/frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
