manifests/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: fastapi-service
   labels:
     app: fastapi-service


spec:
   type: LoadBalancer
   ports:
     - protocol: TCP
       port: 8000
       targetPort: 8000
   selector:
     app: fastapi-summary
