manifests/nginx-service.yaml
apiVersion: v1

kind: Service

metadata:
  name: frontend-service
  labels:
    app: frontend-service
    
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: frontend-summary
